--- a/styles/main.css
+++ b/styles/main.css
@@ -4,15 +4,24 @@
 @import "./tipsList.css";
 
 body{
-    background-color: #7BB0FF;
+    /* background-color: #7BB0FF; */
+    margin: 0;
 }
 
 header {
     text-align: center;
+    background-color: #7BB0FF;
+    padding: 25px;
+    margin: 0;
+}
+
+h1 {
+    margin: 0;
 }
 
 img {
     width: 300px;
+    height: 200px;
     border: 4px solid black;
 }
 
@@ -22,7 +31,7 @@ img {
 }
 
 dl {
-    padding: 0 2em 2em 2em;
+    padding: 0em 1em 1em 1em;
 }
 
 section {
