attempted some changes, but undid all of them, same commit as previous

--- a/styles/fishList.css
+++ b/styles/fishList.css
@@ -1,5 +1,4 @@
 .fishList {
     background-color: #B9E6FF;
-    padding-top: 1em;
-    border-bottom: solid darkblue 4px;
+    border-bottom: solid white 8px;
 }
