--- a/styles/travel__quotes.css
+++ b/styles/travel__quotes.css
@@ -1,5 +1,5 @@
 .travel__quotes {
     background-color: #B9E6FF;
-    border-bottom: solid darkblue 4px;
+    border-bottom: solid white 8px;
     padding-left: 1em;
 }
